--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aframe": "^1.7.1",
+    "aframe-particle-system-component": "^1.1.3",
+    "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react": "^19.2.0"
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
